// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="sc-AxjAm kbZyZT"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="sc-AxjAm keKrjT"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="sc-AxjAm ioaFfi"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="sc-AxjAm bUshfD"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as outline 1`] = `
<div>
  <button
    class="sc-AxjAm tZkZq"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as plain 1`] = `
<div>
  <button
    class="sc-AxjAm hXnHfM"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as transparent 1`] = `
<div>
  <button
    class="sc-AxjAm jqmjQk"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render contrast text if not primary 1`] = `
<div>
  <button
    class="sc-AxjAm kAGudH"
    color="danger"
    type="button"
  />
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-AxjAm kbZyZT"
    color="primary"
    disabled=""
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;

exports[`Button should render white text if primary 1`] = `
<div>
  <button
    class="sc-AxjAm kbZyZT"
    color="primary"
    type="button"
  />
</div>
`;
